[package]
name = "client"
version = "0.1.0"
authors = ["Abner Kaizer <abnerkaizer@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = "2.33.3"
futures = "0.3"
env_logger = "0.8"
tarpc = { version = "0.24.1", features = ["tokio1","serde-transport","tcp"] }
tokio = { version = "1.0", features = ["macros"] }
service = {package="service",path="../service"}