[package]
name = "service"
version = "0.1.0"
authors = ["Abner Kaizer <abnerkaizer@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tarpc = { version = "0.24.1", features = ["tokio1","serde-transport","tcp"] }
tokio = { version = "1.0", features = ["macros"] }